--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,9 +1,15 @@
 .header  {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   font-family: monospace;
   background: papayawhip;
+  padding: 15px;
 }
 
 .logo {
+  flex: 0;
+  text-align: center;
   font-size: 48px;
   font-weight: 900;
   color: tomato;
@@ -13,6 +19,8 @@
 
 ul {
   /* this removes the dots on the list items*/
+  padding: 0;
+  margin: 0;
   list-style-type: none;
 }
 
@@ -22,4 +30,9 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+  margin: 2px;
+}
+
+.header ul {
+  display: flex;
 }
