--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -8,8 +8,10 @@ img {
 }
 
 .title {
+  text-align: center;
   font-size: 36px;
   font-weight: 900;
+  margin-bottom: 32px;
 }
 
 /* do not edit this footer */
@@ -23,4 +25,15 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.content {
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+}
+
+.item {
+  text-align: center;
+  width: 200px;
 }
