--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -1,29 +1,84 @@
+html {
+  box-sizing: border-box;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
 body {
+  display: flex;
+  flex-direction: column;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
 }
 
+ul {
+  list-style: none;
+}
+
+li {
+  margin-bottom: 16px;
+}
+
+a {
+  font-size: 24px;
+  color: white;
+  text-decoration: none;
+}
+
+.header,
+.footer {
+  display: flex;
+  align-items: center;
+  flex: 0;
+  padding: 16px;
+}
+
 .header {
+  font-size: 32px;
+  font-weight: 900;
   height: 72px;
   background: darkmagenta;
   color: white;
 }
 
 .footer {
+  justify-content: center;
   height: 72px;
   background: #eee;
   color: darkmagenta;
 }
 
+.content {
+  flex: 1;
+  display: flex;
+}
+
 .sidebar {
+  flex: 0 0 auto;
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  padding: 16px;
+}
+
+.cards {
+  flex: 1;
+  display: flex;
+  gap: 32px;
+  flex-wrap: wrap;
+  padding: 64px;
 }
 
 .card {
+  flex: 0 1 33%;
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  min-width: 400px;
+  padding: 16px;
 }
